fix error z-index class

--- a/src/CoCreate-helper.css
+++ b/src/CoCreate-helper.css
@@ -88,8 +88,8 @@
 .z-index-11 {z-index:11;}
 .z-index-12 {z-index:12;}
 .z-index-13 {z-index:13;}
-.z-index-14 {z-index:15;}
-.z-index-13 {z-index:13;}
+.z-index-14 {z-index:14;}
+.z-index-15 {z-index:15;}
 .z-index-100 {z-index:100;}
 .z-index-101 {z-index:101;}
 .z-index-1000 {z-index:1000;}
